# Boosty-analogue-on-django

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  1 задание кр  1 задание кр инфа.py  2 задание кр инфа.py  3 дз.py  Bullets.txt  Information_food.csv  README.md  Test_file.py  bot.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test3.py
2 семестр/3/: 3 дз 2 сем.py
HW_1/: my_css.css  my_html.html
Homework 1/: Homework 1 Queue.py
Homework 2/: For Homework 2.html  Homework 2 HTML.py
Homework 3/: Homework 3 .py
Homework 4/: Homework 4.py
Homework 5/: Homework 5.py
deploy/: celery_start.sh  docker-compose.staging.yml
deploy/app/: Dockerfile  uwsgi.ini
deploy/nginx/: Dockerfile  host.conf
mysite/: settings.py  urls.py
src/: conftest.py
src/api/: serializers.py  tests.py  urls.py  views.py
src/mysite/: celery.py  debug.py  settings.py  urls.py
src/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
src/web/: admin.py  db_utils.py  enums.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
src/web/admin/: __init__.py  comment.py  post.py  user.py
src/web/migrations/: 0001_initial.py  0002_user_send_comment_on_post_notification.py  0004_note.py  (+2 more)
templates/registration/: login.html  password_reset_confirm.html  password_reset_done.html  register.html
web/: admin.py  forms.py  models.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_authorinfo_img.py  0003_alter_post_options.py  0003_alter_post_status.py  0004_post_rating.py
web/templatetags/: posts.py
(+45 files in other folders)
